@@ -36,9 +36,9 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 
 import static org.apache.kafka.clients.consumer.internals.AbstractStickyAssignor.DEFAULT_GENERATION;
-import static org.apache.kafka.test.TestUtils.toSet;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNull;
@@ -64,12 +64,12 @@ public class ConsumerProtocolTest {
             ByteBuffer buffer = ConsumerProtocol.serializeSubscription(subscription, version);
             Subscription parsedSubscription = ConsumerProtocol.deserializeSubscription(buffer);
 
-            assertEquals(toSet(subscription.topics()), toSet(parsedSubscription.topics()));
+            assertEquals(Set.copyOf(subscription.topics()), Set.copyOf(parsedSubscription.topics()));
             assertEquals(subscription.userData(), parsedSubscription.userData());
             assertFalse(parsedSubscription.groupInstanceId().isPresent());
 
             if (version >= 1) {
-                assertEquals(toSet(subscription.ownedPartitions()), toSet(parsedSubscription.ownedPartitions()));
+                assertEquals(Set.copyOf(subscription.ownedPartitions()), Set.copyOf(parsedSubscription.ownedPartitions()));
             } else {
                 assertEquals(Collections.emptyList(), parsedSubscription.ownedPartitions());
             }
@@ -93,7 +93,7 @@ public class ConsumerProtocolTest {
         Subscription subscription = new Subscription(Arrays.asList("foo", "bar"), ByteBuffer.wrap(new byte[0]));
         ByteBuffer buffer = ConsumerProtocol.serializeSubscription(subscription);
         Subscription parsedSubscription = ConsumerProtocol.deserializeSubscription(buffer);
-        assertEquals(toSet(subscription.topics()), toSet(parsedSubscription.topics()));
+        assertEquals(Set.copyOf(subscription.topics()), Set.copyOf(parsedSubscription.topics()));
         assertEquals(0, parsedSubscription.userData().limit());
         assertFalse(parsedSubscription.groupInstanceId().isPresent());
         assertFalse(parsedSubscription.generationId().isPresent());
@@ -107,7 +107,7 @@ public class ConsumerProtocolTest {
 
         Subscription parsedSubscription = ConsumerProtocol.deserializeSubscription(buffer);
         parsedSubscription.setGroupInstanceId(groupInstanceId);
-        assertEquals(toSet(subscription.topics()), toSet(parsedSubscription.topics()));
+        assertEquals(Set.copyOf(subscription.topics()), Set.copyOf(parsedSubscription.topics()));
         assertEquals(0, parsedSubscription.userData().limit());
         assertEquals(groupInstanceId, parsedSubscription.groupInstanceId());
         assertFalse(parsedSubscription.generationId().isPresent());
@@ -119,7 +119,7 @@ public class ConsumerProtocolTest {
         Subscription subscription = new Subscription(Arrays.asList("foo", "bar"), null);
         ByteBuffer buffer = ConsumerProtocol.serializeSubscription(subscription);
         Subscription parsedSubscription = ConsumerProtocol.deserializeSubscription(buffer);
-        assertEquals(toSet(subscription.topics()), toSet(parsedSubscription.topics()));
+        assertEquals(Set.copyOf(subscription.topics()), Set.copyOf(parsedSubscription.topics()));
         assertNull(parsedSubscription.userData());
         assertFalse(parsedSubscription.rackId().isPresent());
     }
@@ -153,7 +153,7 @@ public class ConsumerProtocolTest {
         Subscription subscription = new Subscription(Arrays.asList("foo", "bar"), null);
         ByteBuffer buffer = ConsumerProtocol.serializeSubscription(subscription, (short) 0);
         Subscription parsedSubscription = ConsumerProtocol.deserializeSubscription(buffer);
-        assertEquals(toSet(parsedSubscription.topics()), toSet(parsedSubscription.topics()));
+        assertEquals(Set.copyOf(subscription.topics()), Set.copyOf(parsedSubscription.topics()));
         assertNull(parsedSubscription.userData());
         assertTrue(parsedSubscription.ownedPartitions().isEmpty());
         assertFalse(parsedSubscription.generationId().isPresent());
@@ -173,7 +173,7 @@ public class ConsumerProtocolTest {
         // ignore the version assuming it is the old byte code, as it will blindly deserialize as V0
         ConsumerProtocol.deserializeVersion(buffer);
         Subscription parsedSubscription = ConsumerProtocol.deserializeSubscription(buffer, (short) 0);
-        assertEquals(toSet(subscription.topics()), toSet(parsedSubscription.topics()));
+        assertEquals(Set.copyOf(subscription.topics()), Set.copyOf(parsedSubscription.topics()));
         assertNull(parsedSubscription.userData());
         assertTrue(parsedSubscription.ownedPartitions().isEmpty());
         assertFalse(parsedSubscription.groupInstanceId().isPresent());
@@ -187,8 +187,8 @@ public class ConsumerProtocolTest {
 
         Subscription subscription = ConsumerProtocol.deserializeSubscription(buffer);
         subscription.setGroupInstanceId(groupInstanceId);
-        assertEquals(Collections.singleton("topic"), toSet(subscription.topics()));
-        assertEquals(Collections.singleton(tp2), toSet(subscription.ownedPartitions()));
+        assertEquals(Collections.singleton("topic"), Set.copyOf(subscription.topics()));
+        assertEquals(Collections.singleton(tp2), Set.copyOf(subscription.ownedPartitions()));
         assertEquals(groupInstanceId, subscription.groupInstanceId());
         assertEquals(generationId, subscription.generationId().orElse(DEFAULT_GENERATION));
         assertEquals(rackId, subscription.rackId());
@@ -202,7 +202,7 @@ public class ConsumerProtocolTest {
         for (short version = ConsumerProtocolAssignment.LOWEST_SUPPORTED_VERSION; version <= ConsumerProtocolAssignment.HIGHEST_SUPPORTED_VERSION; version++) {
             ByteBuffer buffer = ConsumerProtocol.serializeAssignment(assignment, version);
             Assignment parsedAssignment = ConsumerProtocol.deserializeAssignment(buffer);
-            assertEquals(toSet(partitions), toSet(parsedAssignment.partitions()));
+            assertEquals(Set.copyOf(partitions), Set.copyOf(parsedAssignment.partitions()));
             assertEquals(assignment.userData(), parsedAssignment.userData());
         }
     }
@@ -225,7 +225,7 @@ public class ConsumerProtocolTest {
         for (short version = ConsumerProtocolAssignment.LOWEST_SUPPORTED_VERSION; version <= ConsumerProtocolAssignment.HIGHEST_SUPPORTED_VERSION; version++) {
             ByteBuffer buffer = ConsumerProtocol.serializeAssignment(assignment, version);
             ConsumerProtocolAssignment parsedAssignment = ConsumerProtocol.deserializeConsumerProtocolAssignment(buffer);
-            assertEquals(toSet(assignment.assignedPartitions()), toSet(parsedAssignment.assignedPartitions()));
+            assertEquals(Set.copyOf(assignment.assignedPartitions()), Set.copyOf(parsedAssignment.assignedPartitions()));
             assertEquals(assignment.userData(), parsedAssignment.userData());
         }
     }
@@ -235,7 +235,7 @@ public class ConsumerProtocolTest {
         List<TopicPartition> partitions = Arrays.asList(tp1, tp2);
         ByteBuffer buffer = ConsumerProtocol.serializeAssignment(new Assignment(partitions, ByteBuffer.wrap(new byte[0])));
         Assignment parsedAssignment = ConsumerProtocol.deserializeAssignment(buffer);
-        assertEquals(toSet(partitions), toSet(parsedAssignment.partitions()));
+        assertEquals(Set.copyOf(partitions), Set.copyOf(parsedAssignment.partitions()));
         assertEquals(0, parsedAssignment.userData().limit());
     }
 
@@ -244,7 +244,7 @@ public class ConsumerProtocolTest {
         List<TopicPartition> partitions = Arrays.asList(tp1, tp2);
         ByteBuffer buffer = ConsumerProtocol.serializeAssignment(new Assignment(partitions, null));
         Assignment parsedAssignment = ConsumerProtocol.deserializeAssignment(buffer);
-        assertEquals(toSet(partitions), toSet(parsedAssignment.partitions()));
+        assertEquals(Set.copyOf(partitions), Set.copyOf(parsedAssignment.partitions()));
         assertNull(parsedAssignment.userData());
     }
 
@@ -277,7 +277,7 @@ public class ConsumerProtocolTest {
         buffer.flip();
 
         Assignment assignment = ConsumerProtocol.deserializeAssignment(buffer);
-        assertEquals(toSet(Collections.singletonList(tp1)), toSet(assignment.partitions()));
+        assertEquals(Set.of(tp1), Set.copyOf(assignment.partitions()));
     }
 
     @Test
@@ -292,16 +292,16 @@ public class ConsumerProtocolTest {
             ByteBuffer buffer = ConsumerProtocol.serializeSubscription(subscription, version);
             ConsumerProtocolSubscription parsedSubscription = ConsumerProtocol.deserializeConsumerProtocolSubscription(buffer);
 
-            assertEquals(toSet(subscription.topics()), toSet(parsedSubscription.topics()));
+            assertEquals(Set.copyOf(subscription.topics()), Set.copyOf(parsedSubscription.topics()));
             assertEquals(subscription.userData(), parsedSubscription.userData());
 
             if (version >= 1) {
                 assertEquals(
-                    toSet(Arrays.asList(
-                        new ConsumerProtocolSubscription.TopicPartition().setTopic("foo").setPartitions(Collections.singletonList(0)),
-                        new ConsumerProtocolSubscription.TopicPartition().setTopic("bar").setPartitions(Collections.singletonList(0))
+                        Set.of(
+                            new ConsumerProtocolSubscription.TopicPartition().setTopic("foo").setPartitions(Collections.singletonList(0)),
+                            new ConsumerProtocolSubscription.TopicPartition().setTopic("bar").setPartitions(Collections.singletonList(0)
                     )),
-                    toSet(parsedSubscription.ownedPartitions())
+                        Set.copyOf(parsedSubscription.ownedPartitions())
                 );
             } else {
                 assertEquals(new ConsumerProtocolSubscription.TopicPartitionCollection(), parsedSubscription.ownedPartitions());
