@@ -16,65 +16,64 @@
  */
 package kafka.server.share;
 
-import kafka.server.FetchSession;
-import kafka.server.QuotaFactory;
+import kafka.cluster.PartitionListener;
 import kafka.server.ReplicaManager;
 
-import org.apache.kafka.clients.consumer.AcknowledgeType;
 import org.apache.kafka.common.TopicIdPartition;
 import org.apache.kafka.common.TopicPartition;
 import org.apache.kafka.common.Uuid;
+import org.apache.kafka.common.errors.FencedStateEpochException;
+import org.apache.kafka.common.errors.GroupIdNotFoundException;
+import org.apache.kafka.common.errors.LeaderNotAvailableException;
+import org.apache.kafka.common.errors.NotLeaderOrFollowerException;
+import org.apache.kafka.common.errors.UnknownTopicOrPartitionException;
 import org.apache.kafka.common.message.ShareAcknowledgeResponseData;
-import org.apache.kafka.common.message.ShareFetchResponseData;
 import org.apache.kafka.common.message.ShareFetchResponseData.PartitionData;
-import org.apache.kafka.common.metrics.Metrics;
-import org.apache.kafka.common.metrics.Sensor;
-import org.apache.kafka.common.metrics.stats.Avg;
-import org.apache.kafka.common.metrics.stats.Max;
-import org.apache.kafka.common.metrics.stats.Meter;
 import org.apache.kafka.common.protocol.Errors;
-import org.apache.kafka.common.record.FileRecords.TimestampAndOffset;
-import org.apache.kafka.common.requests.FetchRequest;
-import org.apache.kafka.common.requests.ListOffsetsRequest;
-import org.apache.kafka.common.requests.ShareFetchMetadata;
-import org.apache.kafka.common.requests.ShareFetchRequest;
+import org.apache.kafka.common.requests.ShareRequestMetadata;
 import org.apache.kafka.common.utils.ImplicitLinkedHashCollection;
 import org.apache.kafka.common.utils.Time;
-import org.apache.kafka.server.group.share.Persister;
+import org.apache.kafka.coordinator.group.GroupConfigManager;
 import org.apache.kafka.server.share.CachedSharePartition;
-import org.apache.kafka.server.share.ShareAcknowledgementBatch;
-import org.apache.kafka.server.share.ShareSession;
-import org.apache.kafka.server.share.ShareSessionCache;
-import org.apache.kafka.server.share.ShareSessionKey;
+import org.apache.kafka.server.share.SharePartitionKey;
+import org.apache.kafka.server.share.acknowledge.ShareAcknowledgementBatch;
+import org.apache.kafka.server.share.context.FinalContext;
+import org.apache.kafka.server.share.context.ShareFetchContext;
+import org.apache.kafka.server.share.context.ShareSessionContext;
+import org.apache.kafka.server.share.fetch.DelayedShareFetchGroupKey;
+import org.apache.kafka.server.share.fetch.DelayedShareFetchKey;
+import org.apache.kafka.server.share.fetch.DelayedShareFetchPartitionKey;
+import org.apache.kafka.server.share.fetch.PartitionRotateStrategy;
+import org.apache.kafka.server.share.fetch.PartitionRotateStrategy.PartitionRotateMetadata;
+import org.apache.kafka.server.share.fetch.ShareFetch;
+import org.apache.kafka.server.share.metrics.ShareGroupMetrics;
+import org.apache.kafka.server.share.persister.Persister;
+import org.apache.kafka.server.share.session.ShareSession;
+import org.apache.kafka.server.share.session.ShareSessionCache;
+import org.apache.kafka.server.share.session.ShareSessionKey;
+import org.apache.kafka.server.storage.log.FetchParams;
+import org.apache.kafka.server.util.FutureUtils;
 import org.apache.kafka.server.util.timer.SystemTimer;
 import org.apache.kafka.server.util.timer.SystemTimerReaper;
 import org.apache.kafka.server.util.timer.Timer;
-import org.apache.kafka.storage.internals.log.FetchParams;
-import org.apache.kafka.storage.internals.log.FetchPartitionData;
+import org.apache.kafka.storage.log.metrics.BrokerTopicStats;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.ConcurrentLinkedQueue;
-import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.stream.Collectors;
-
-import scala.Option;
-import scala.Tuple2;
-import scala.jdk.javaapi.CollectionConverters;
-import scala.runtime.BoxedUnit;
+import java.util.function.BiConsumer;
+import java.util.function.Consumer;
 
 /**
  * The SharePartitionManager is responsible for managing the SharePartitions and ShareSessions.
@@ -105,19 +104,15 @@ public class SharePartitionManager implements AutoCloseable {
     private final ShareSessionCache cache;
 
     /**
-     * The fetch queue stores the share fetch requests that are waiting to be processed.
+     * The group config manager is used to retrieve the values for dynamic group configurations
      */
-    private final ConcurrentLinkedQueue<ShareFetchPartitionData> fetchQueue;
+    private final GroupConfigManager groupConfigManager;
 
     /**
-     * The process fetch queue lock is used to ensure that only one thread is processing the fetch queue at a time.
+     * The default record lock duration is the time in milliseconds that a record lock is held for.
+     * This default value can be overridden by a group-specific configuration.
      */
-    private final AtomicBoolean processFetchQueueLock;
-
-    /**
-     * The record lock duration is the time in milliseconds that a record lock is held for.
-     */
-    private final int recordLockDurationMs;
+    private final int defaultRecordLockDurationMs;
 
     /**
      * The timer is used to schedule the records lock timeout.
@@ -144,26 +139,33 @@ public class SharePartitionManager implements AutoCloseable {
      */
     private final ShareGroupMetrics shareGroupMetrics;
 
+    /**
+     * The broker topic stats is used to record the broker topic metrics for share group.
+     */
+    private final BrokerTopicStats brokerTopicStats;
+
     public SharePartitionManager(
         ReplicaManager replicaManager,
         Time time,
         ShareSessionCache cache,
-        int recordLockDurationMs,
+        int defaultRecordLockDurationMs,
         int maxDeliveryCount,
         int maxInFlightMessages,
         Persister persister,
-        Metrics metrics
+        GroupConfigManager groupConfigManager,
+        BrokerTopicStats brokerTopicStats
     ) {
-        this(
-            replicaManager,
+        this(replicaManager,
             time,
             cache,
             new ConcurrentHashMap<>(),
-            recordLockDurationMs,
+            defaultRecordLockDurationMs,
             maxDeliveryCount,
             maxInFlightMessages,
             persister,
-            metrics
+            groupConfigManager,
+            new ShareGroupMetrics(time),
+            brokerTopicStats
         );
     }
 
@@ -172,25 +174,28 @@ public class SharePartitionManager implements AutoCloseable {
         Time time,
         ShareSessionCache cache,
         Map<SharePartitionKey, SharePartition> partitionCacheMap,
-        int recordLockDurationMs,
+        int defaultRecordLockDurationMs,
         int maxDeliveryCount,
         int maxInFlightMessages,
         Persister persister,
-        Metrics metrics
+        GroupConfigManager groupConfigManager,
+        ShareGroupMetrics shareGroupMetrics,
+        BrokerTopicStats brokerTopicStats
     ) {
-        this.replicaManager = replicaManager;
-        this.time = time;
-        this.cache = cache;
-        this.partitionCacheMap = partitionCacheMap;
-        this.fetchQueue = new ConcurrentLinkedQueue<>();
-        this.processFetchQueueLock = new AtomicBoolean(false);
-        this.recordLockDurationMs = recordLockDurationMs;
-        this.timer = new SystemTimerReaper("share-group-lock-timeout-reaper",
-            new SystemTimer("share-group-lock-timeout"));
-        this.maxDeliveryCount = maxDeliveryCount;
-        this.maxInFlightMessages = maxInFlightMessages;
-        this.persister = persister;
-        this.shareGroupMetrics = new ShareGroupMetrics(Objects.requireNonNull(metrics), time);
+        this(replicaManager,
+            time,
+            cache,
+            partitionCacheMap,
+            defaultRecordLockDurationMs,
+            new SystemTimerReaper("share-group-lock-timeout-reaper",
+                new SystemTimer("share-group-lock-timeout")),
+            maxDeliveryCount,
+            maxInFlightMessages,
+            persister,
+            groupConfigManager,
+            shareGroupMetrics,
+            brokerTopicStats
+        );
     }
 
     // Visible for testing.
@@ -199,26 +204,27 @@ public class SharePartitionManager implements AutoCloseable {
             Time time,
             ShareSessionCache cache,
             Map<SharePartitionKey, SharePartition> partitionCacheMap,
-            ConcurrentLinkedQueue<ShareFetchPartitionData> fetchQueue,
-            int recordLockDurationMs,
+            int defaultRecordLockDurationMs,
             Timer timer,
             int maxDeliveryCount,
             int maxInFlightMessages,
             Persister persister,
-            Metrics metrics
+            GroupConfigManager groupConfigManager,
+            ShareGroupMetrics shareGroupMetrics,
+            BrokerTopicStats brokerTopicStats
     ) {
         this.replicaManager = replicaManager;
         this.time = time;
         this.cache = cache;
         this.partitionCacheMap = partitionCacheMap;
-        this.fetchQueue = fetchQueue;
-        this.processFetchQueueLock = new AtomicBoolean(false);
-        this.recordLockDurationMs = recordLockDurationMs;
+        this.defaultRecordLockDurationMs = defaultRecordLockDurationMs;
         this.timer = timer;
         this.maxDeliveryCount = maxDeliveryCount;
         this.maxInFlightMessages = maxInFlightMessages;
         this.persister = persister;
-        this.shareGroupMetrics = new ShareGroupMetrics(Objects.requireNonNull(metrics), time);
+        this.groupConfigManager = groupConfigManager;
+        this.shareGroupMetrics = shareGroupMetrics;
+        this.brokerTopicStats = brokerTopicStats;
     }
 
     /**
@@ -228,26 +234,31 @@ public class SharePartitionManager implements AutoCloseable {
      * @param groupId The group id, this is used to identify the share group.
      * @param memberId The member id, generated by the group-coordinator, this is used to identify the client.
      * @param fetchParams The fetch parameters from the share fetch request.
-     * @param topicIdPartitions The topic-partitions to fetch messages for.
-     * @param partitionMaxBytes The maximum number of bytes to fetch for each partition.
+     * @param sessionEpoch The session epoch for the member.
+     * @param maxFetchRecords The maximum number of records to fetch.
+     * @param batchSize The number of records per acquired records batch.
+     * @param topicIdPartitions The topic partitions to fetch for.
      *
      * @return A future that will be completed with the fetched messages.
      */
-    public CompletableFuture<Map<TopicIdPartition, ShareFetchResponseData.PartitionData>> fetchMessages(
+    public CompletableFuture<Map<TopicIdPartition, PartitionData>> fetchMessages(
         String groupId,
         String memberId,
         FetchParams fetchParams,
-        List<TopicIdPartition> topicIdPartitions,
-        Map<TopicIdPartition, Integer> partitionMaxBytes
+        int sessionEpoch,
+        int maxFetchRecords,
+        int batchSize,
+        List<TopicIdPartition> topicIdPartitions
     ) {
         log.trace("Fetch request for topicIdPartitions: {} with groupId: {} fetch params: {}",
             topicIdPartitions, groupId, fetchParams);
 
-        CompletableFuture<Map<TopicIdPartition, ShareFetchResponseData.PartitionData>> future = new CompletableFuture<>();
-        ShareFetchPartitionData shareFetchPartitionData = new ShareFetchPartitionData(fetchParams, groupId, memberId,
-            topicIdPartitions, future, partitionMaxBytes);
-        fetchQueue.add(shareFetchPartitionData);
-        maybeProcessFetchQueue();
+        List<TopicIdPartition> rotatedTopicIdPartitions = PartitionRotateStrategy
+            .type(PartitionRotateStrategy.StrategyType.ROUND_ROBIN)
+            .rotate(topicIdPartitions, new PartitionRotateMetadata(sessionEpoch));
+
+        CompletableFuture<Map<TopicIdPartition, PartitionData>> future = new CompletableFuture<>();
+        processShareFetch(new ShareFetch(fetchParams, groupId, memberId, future, rotatedTopicIdPartitions, batchSize, maxFetchRecords, brokerTopicStats));
 
         return future;
     }
@@ -269,39 +280,56 @@ public class SharePartitionManager implements AutoCloseable {
     ) {
         log.trace("Acknowledge request for topicIdPartitions: {} with groupId: {}",
             acknowledgeTopics.keySet(), groupId);
-        this.shareGroupMetrics.shareAcknowledgement();
-        Map<TopicIdPartition, CompletableFuture<Errors>> futures = new HashMap<>();
+        Map<TopicIdPartition, CompletableFuture<Throwable>> futures = new HashMap<>();
+        // Track the topics for which we have received an acknowledgement for metrics.
+        Set<String> topics = new HashSet<>();
         acknowledgeTopics.forEach((topicIdPartition, acknowledgePartitionBatches) -> {
-            SharePartition sharePartition = partitionCacheMap.get(sharePartitionKey(groupId, topicIdPartition));
+            topics.add(topicIdPartition.topic());
+            SharePartitionKey sharePartitionKey = sharePartitionKey(groupId, topicIdPartition);
+            SharePartition sharePartition = partitionCacheMap.get(sharePartitionKey);
             if (sharePartition != null) {
-                CompletableFuture<Errors> future = sharePartition.acknowledge(memberId, acknowledgePartitionBatches).thenApply(throwable -> {
-                    if (throwable.isPresent()) {
-                        return Errors.forException(throwable.get());
+                CompletableFuture<Throwable> future = new CompletableFuture<>();
+                sharePartition.acknowledge(memberId, acknowledgePartitionBatches).whenComplete((result, throwable) -> {
+                    if (throwable != null) {
+                        fencedSharePartitionHandler().accept(sharePartitionKey, throwable);
+                        future.complete(throwable);
+                        return;
                     }
                     acknowledgePartitionBatches.forEach(batch -> {
-                        batch.acknowledgeTypes().forEach(this.shareGroupMetrics::recordAcknowledgement);
+                        // Client can either send a single entry in acknowledgeTypes which represents
+                        // the state of the complete batch or can send individual offsets state.
+                        if (batch.acknowledgeTypes().size() == 1) {
+                            shareGroupMetrics.recordAcknowledgement(batch.acknowledgeTypes().get(0), batch.lastOffset() - batch.firstOffset() + 1);
+                        } else {
+                            batch.acknowledgeTypes().forEach(shareGroupMetrics::recordAcknowledgement);
+                        }
                     });
-                    return Errors.NONE;
+                    future.complete(null);
                 });
+
+                // If we have an acknowledgement completed for a topic-partition, then we should check if
+                // there is a pending share fetch request for the topic-partition and complete it.
+                DelayedShareFetchKey delayedShareFetchKey = new DelayedShareFetchGroupKey(groupId, topicIdPartition.topicId(), topicIdPartition.partition());
+                replicaManager.completeDelayedShareFetchRequest(delayedShareFetchKey);
+
                 futures.put(topicIdPartition, future);
             } else {
-                futures.put(topicIdPartition, CompletableFuture.completedFuture(Errors.UNKNOWN_TOPIC_OR_PARTITION));
+                futures.put(topicIdPartition, CompletableFuture.completedFuture(Errors.UNKNOWN_TOPIC_OR_PARTITION.exception()));
             }
         });
 
-        CompletableFuture<Void> allFutures = CompletableFuture.allOf(
-            futures.values().toArray(new CompletableFuture[0]));
-        return allFutures.thenApply(v -> {
-            Map<TopicIdPartition, ShareAcknowledgeResponseData.PartitionData> result = new HashMap<>();
-            futures.forEach((topicIdPartition, future) -> result.put(topicIdPartition, new ShareAcknowledgeResponseData.PartitionData()
-                .setPartitionIndex(topicIdPartition.partition())
-                .setErrorCode(future.join().code())));
-            return result;
+        // Update the metrics for the topics for which we have received an acknowledgement.
+        topics.forEach(topic -> {
+            brokerTopicStats.allTopicsStats().totalShareAcknowledgementRequestRate().mark();
+            brokerTopicStats.topicStats(topic).totalShareAcknowledgementRequestRate().mark();
         });
+
+        return mapAcknowledgementFutures(futures, Optional.of(failedShareAcknowledgeMetricsHandler()));
     }
 
     /**
-     * The release acquired records method is used to release the acquired records for the specified topic-partitions.
+     * The release session method is used to release the session for the memberId of respective group.
+     * The method post removing session also releases acquired records for the respective member.
      * The method returns a future that will be completed with the release response.
      *
      * @param groupId The group id, this is used to identify the share group.
@@ -309,41 +337,79 @@ public class SharePartitionManager implements AutoCloseable {
      *
      * @return A future that will be completed with the release response.
      */
-    public CompletableFuture<Map<TopicIdPartition, ShareAcknowledgeResponseData.PartitionData>> releaseAcquiredRecords(
+    public CompletableFuture<Map<TopicIdPartition, ShareAcknowledgeResponseData.PartitionData>> releaseSession(
         String groupId,
         String memberId
     ) {
-        log.trace("Release acquired records request for groupId: {}, memberId: {}", groupId, memberId);
+        log.trace("Release session request for groupId: {}, memberId: {}", groupId, memberId);
+        Uuid memberIdUuid = Uuid.fromString(memberId);
         List<TopicIdPartition> topicIdPartitions = cachedTopicIdPartitionsInShareSession(
-            groupId, Uuid.fromString(memberId));
-        if (topicIdPartitions.isEmpty()) {
-            return CompletableFuture.completedFuture(Collections.emptyMap());
+            groupId, memberIdUuid);
+        // Remove the share session from the cache.
+        ShareSessionKey key = shareSessionKey(groupId, memberIdUuid);
+        if (cache.remove(key) == null) {
+            log.error("Share session error for {}: no such share session found", key);
+            return FutureUtils.failedFuture(Errors.SHARE_SESSION_NOT_FOUND.exception());
+        } else {
+            log.debug("Removed share session with key {}", key);
         }
 
-        Map<TopicIdPartition, CompletableFuture<Errors>> futuresMap = new HashMap<>();
+        // Additionally release the acquired records for the respective member.
+        if (topicIdPartitions.isEmpty()) {
+            return CompletableFuture.completedFuture(Map.of());
+        }
+
+        Map<TopicIdPartition, CompletableFuture<Throwable>> futuresMap = new HashMap<>();
         topicIdPartitions.forEach(topicIdPartition -> {
-            SharePartition sharePartition = partitionCacheMap.get(sharePartitionKey(groupId, topicIdPartition));
+            SharePartitionKey sharePartitionKey = sharePartitionKey(groupId, topicIdPartition);
+            SharePartition sharePartition = partitionCacheMap.get(sharePartitionKey);
             if (sharePartition == null) {
                 log.error("No share partition found for groupId {} topicPartition {} while releasing acquired topic partitions", groupId, topicIdPartition);
-                futuresMap.put(topicIdPartition, CompletableFuture.completedFuture(Errors.UNKNOWN_TOPIC_OR_PARTITION));
+                futuresMap.put(topicIdPartition, CompletableFuture.completedFuture(Errors.UNKNOWN_TOPIC_OR_PARTITION.exception()));
             } else {
-                CompletableFuture<Errors> future = sharePartition.releaseAcquiredRecords(memberId).thenApply(throwable -> {
-                    if (throwable.isPresent()) {
-                        return Errors.forException(throwable.get());
+                CompletableFuture<Throwable> future = new CompletableFuture<>();
+                sharePartition.releaseAcquiredRecords(memberId).whenComplete((result, throwable) -> {
+                    if (throwable != null) {
+                        fencedSharePartitionHandler().accept(sharePartitionKey, throwable);
+                        future.complete(throwable);
+                        return;
                     }
-                    return Errors.NONE;
+                    future.complete(null);
                 });
+                // If we have a release acquired request completed for a topic-partition, then we should check if
+                // there is a pending share fetch request for the topic-partition and complete it.
+                DelayedShareFetchKey delayedShareFetchKey = new DelayedShareFetchGroupKey(groupId, topicIdPartition.topicId(), topicIdPartition.partition());
+                replicaManager.completeDelayedShareFetchRequest(delayedShareFetchKey);
+
                 futuresMap.put(topicIdPartition, future);
             }
         });
 
+        return mapAcknowledgementFutures(futuresMap, Optional.empty());
+    }
+
+    private CompletableFuture<Map<TopicIdPartition, ShareAcknowledgeResponseData.PartitionData>> mapAcknowledgementFutures(
+        Map<TopicIdPartition, CompletableFuture<Throwable>> futuresMap,
+        Optional<Consumer<Set<String>>> failedMetricsHandler
+    ) {
         CompletableFuture<Void> allFutures = CompletableFuture.allOf(
-                futuresMap.values().toArray(new CompletableFuture[futuresMap.size()]));
+            futuresMap.values().toArray(new CompletableFuture<?>[0]));
         return allFutures.thenApply(v -> {
             Map<TopicIdPartition, ShareAcknowledgeResponseData.PartitionData> result = new HashMap<>();
-            futuresMap.forEach((topicIdPartition, future) -> result.put(topicIdPartition, new ShareAcknowledgeResponseData.PartitionData()
-                    .setPartitionIndex(topicIdPartition.partition())
-                    .setErrorCode(future.join().code())));
+            // Keep the set as same topic might appear multiple times. Multiple partitions can fail for same topic.
+            Set<String> failedTopics = new HashSet<>();
+            futuresMap.forEach((topicIdPartition, future) -> {
+                ShareAcknowledgeResponseData.PartitionData partitionData = new ShareAcknowledgeResponseData.PartitionData()
+                    .setPartitionIndex(topicIdPartition.partition());
+                Throwable t = future.join();
+                if (t != null) {
+                    partitionData.setErrorCode(Errors.forException(t).code())
+                        .setErrorMessage(t.getMessage());
+                    failedTopics.add(topicIdPartition.topic());
+                }
+                result.put(topicIdPartition, partitionData);
+            });
+            failedMetricsHandler.ifPresent(handler -> handler.accept(failedTopics));
             return result;
         });
     }
@@ -351,40 +417,37 @@ public class SharePartitionManager implements AutoCloseable {
     /**
      * The newContext method is used to create a new share fetch context for every share fetch request.
      * @param groupId The group id in the share fetch request.
-     * @param shareFetchData The topic-partitions and their corresponding maxBytes data in the share fetch request.
+     * @param shareFetchData The topic-partitions in the share fetch request.
      * @param toForget The topic-partitions to forget present in the share fetch request.
      * @param reqMetadata The metadata in the share fetch request.
+     * @param isAcknowledgeDataPresent This tells whether the fetch request received includes piggybacked acknowledgements or not
      * @return The new share fetch context object
      */
-    public ShareFetchContext newContext(String groupId, Map<TopicIdPartition,
-            ShareFetchRequest.SharePartitionData> shareFetchData, List<TopicIdPartition> toForget, ShareFetchMetadata reqMetadata) {
+    public ShareFetchContext newContext(String groupId, List<TopicIdPartition> shareFetchData,
+                                        List<TopicIdPartition> toForget, ShareRequestMetadata reqMetadata, Boolean isAcknowledgeDataPresent) {
         ShareFetchContext context;
-        // TopicPartition with maxBytes as 0 should not be added in the cachedPartitions
-        Map<TopicIdPartition, ShareFetchRequest.SharePartitionData> shareFetchDataWithMaxBytes = new HashMap<>();
-        shareFetchData.forEach((tp, sharePartitionData) -> {
-            if (sharePartitionData.maxBytes > 0) shareFetchDataWithMaxBytes.put(tp, sharePartitionData);
-        });
         // If the request's epoch is FINAL_EPOCH or INITIAL_EPOCH, we should remove the existing sessions. Also, start a
         // new session in case it is INITIAL_EPOCH. Hence, we need to treat them as special cases.
         if (reqMetadata.isFull()) {
             ShareSessionKey key = shareSessionKey(groupId, reqMetadata.memberId());
-            if (reqMetadata.epoch() == ShareFetchMetadata.FINAL_EPOCH) {
-                // If the epoch is FINAL_EPOCH, don't try to create a new session.
-                if (!shareFetchDataWithMaxBytes.isEmpty()) {
-                    throw Errors.INVALID_REQUEST.exception();
+            if (reqMetadata.epoch() == ShareRequestMetadata.FINAL_EPOCH) {
+                if (cache.get(key) == null) {
+                    log.error("Share session error for {}: no such share session found", key);
+                    throw Errors.SHARE_SESSION_NOT_FOUND.exception();
                 }
                 context = new FinalContext();
-                if (cache.remove(key) != null) {
-                    log.debug("Removed share session with key {}", key);
-                }
             } else {
+                if (isAcknowledgeDataPresent) {
+                    log.error("Acknowledge data present in Initial Fetch Request for group {} member {}", groupId, reqMetadata.memberId());
+                    throw Errors.INVALID_REQUEST.exception();
+                }
                 if (cache.remove(key) != null) {
                     log.debug("Removed share session with key {}", key);
                 }
                 ImplicitLinkedHashCollection<CachedSharePartition> cachedSharePartitions = new
-                        ImplicitLinkedHashCollection<>(shareFetchDataWithMaxBytes.size());
-                shareFetchDataWithMaxBytes.forEach((topicIdPartition, reqData) ->
-                    cachedSharePartitions.mustAdd(new CachedSharePartition(topicIdPartition, reqData, false)));
+                        ImplicitLinkedHashCollection<>(shareFetchData.size());
+                shareFetchData.forEach(topicIdPartition ->
+                    cachedSharePartitions.mustAdd(new CachedSharePartition(topicIdPartition, false)));
                 ShareSessionKey responseShareSessionKey = cache.maybeCreateSession(groupId, reqMetadata.memberId(),
                         time.milliseconds(), cachedSharePartitions);
                 if (responseShareSessionKey == null) {
@@ -392,10 +455,10 @@ public class SharePartitionManager implements AutoCloseable {
                     throw Errors.SHARE_SESSION_NOT_FOUND.exception();
                 }
 
-                context = new ShareSessionContext(reqMetadata, shareFetchDataWithMaxBytes);
+                context = new ShareSessionContext(reqMetadata, shareFetchData);
                 log.debug("Created a new ShareSessionContext with key {} isSubsequent {} returning {}. A new share " +
                         "session will be started.", responseShareSessionKey, false,
-                        partitionsToLogString(shareFetchDataWithMaxBytes.keySet()));
+                        partitionsToLogString(shareFetchData));
             }
         } else {
             // We update the already existing share session.
@@ -412,9 +475,9 @@ public class SharePartitionManager implements AutoCloseable {
                     throw Errors.INVALID_SHARE_SESSION_EPOCH.exception();
                 }
                 Map<ShareSession.ModifiedTopicIdPartitionType, List<TopicIdPartition>> modifiedTopicIdPartitions = shareSession.update(
-                        shareFetchDataWithMaxBytes, toForget);
+                    shareFetchData, toForget);
                 cache.touch(shareSession, time.milliseconds());
-                shareSession.epoch = ShareFetchMetadata.nextEpoch(shareSession.epoch);
+                shareSession.epoch = ShareRequestMetadata.nextEpoch(shareSession.epoch);
                 log.debug("Created a new ShareSessionContext for session key {}, epoch {}: " +
                                 "added {}, updated {}, removed {}", shareSession.key(), shareSession.epoch,
                         partitionsToLogString(modifiedTopicIdPartitions.get(
@@ -426,6 +489,38 @@ public class SharePartitionManager implements AutoCloseable {
             }
         }
         return context;
+    }
+
+    /**
+     * The acknowledgeSessionUpdate method is used to update the request epoch and lastUsed time of the share session.
+     * @param groupId The group id in the share fetch request.
+     * @param reqMetadata The metadata in the share acknowledge request.
+     */
+    public void acknowledgeSessionUpdate(String groupId, ShareRequestMetadata reqMetadata) {
+        if (reqMetadata.epoch() == ShareRequestMetadata.INITIAL_EPOCH) {
+            // ShareAcknowledge Request cannot have epoch as INITIAL_EPOCH (0)
+            throw Errors.INVALID_SHARE_SESSION_EPOCH.exception();
+        } else {
+            synchronized (cache) {
+                ShareSessionKey key = shareSessionKey(groupId, reqMetadata.memberId());
+                ShareSession shareSession = cache.get(key);
+                if (shareSession == null) {
+                    log.debug("Share session error for {}: no such share session found", key);
+                    throw Errors.SHARE_SESSION_NOT_FOUND.exception();
+                }
+
+                if (reqMetadata.epoch() == ShareRequestMetadata.FINAL_EPOCH) {
+                    // If the epoch is FINAL_EPOCH, then return. Do not update the cache.
+                    return;
+                } else if (shareSession.epoch != reqMetadata.epoch()) {
+                    log.debug("Share session error for {}: expected epoch {}, but got {} instead", key,
+                            shareSession.epoch, reqMetadata.epoch());
+                    throw Errors.INVALID_SHARE_SESSION_EPOCH.exception();
+                }
+                cache.touch(shareSession, time.milliseconds());
+                shareSession.epoch = ShareRequestMetadata.nextEpoch(shareSession.epoch);
+            }
+        }
     }
 
     /**
@@ -441,7 +536,7 @@ public class SharePartitionManager implements AutoCloseable {
         ShareSessionKey key = shareSessionKey(groupId, memberId);
         ShareSession shareSession = cache.get(key);
         if (shareSession == null) {
-            return Collections.emptyList();
+            return List.of();
         }
         List<TopicIdPartition> cachedTopicIdPartitions = new ArrayList<>();
         shareSession.partitionMap().forEach(cachedSharePartition -> cachedTopicIdPartitions.add(
@@ -450,10 +545,16 @@ public class SharePartitionManager implements AutoCloseable {
         return cachedTopicIdPartitions;
     }
 
+    // Add the share fetch request to the delayed share fetch purgatory to process the fetch request if it can be
+    // completed else watch until it can be completed/timeout.
+    private void addDelayedShareFetch(DelayedShareFetch delayedShareFetch, List<DelayedShareFetchKey> keys) {
+        replicaManager.addDelayedShareFetchRequest(delayedShareFetch, keys);
+    }
+
     @Override
     public void close() throws Exception {
         this.timer.close();
-        this.persister.stop();
+        this.shareGroupMetrics.close();
     }
 
     private ShareSessionKey shareSessionKey(String groupId, Uuid memberId) {
@@ -461,363 +562,235 @@ public class SharePartitionManager implements AutoCloseable {
     }
 
     private static String partitionsToLogString(Collection<TopicIdPartition> partitions) {
-        return FetchSession.partitionsToLogString(partitions, log.isTraceEnabled());
+        return ShareSession.partitionsToLogString(partitions, log.isTraceEnabled());
+    }
+
+    // Visible for testing.
+    void processShareFetch(ShareFetch shareFetch) {
+        if (shareFetch.topicIdPartitions().isEmpty()) {
+            // If there are no partitions to fetch then complete the future with an empty map.
+            shareFetch.maybeComplete(Map.of());
+            return;
+        }
+
+        List<DelayedShareFetchKey> delayedShareFetchWatchKeys = new ArrayList<>();
+        LinkedHashMap<TopicIdPartition, SharePartition> sharePartitions = new LinkedHashMap<>();
+        // Track the topics for which we have received a share fetch request for metrics.
+        Set<String> topics = new HashSet<>();
+        for (TopicIdPartition topicIdPartition : shareFetch.topicIdPartitions()) {
+            topics.add(topicIdPartition.topic());
+            SharePartitionKey sharePartitionKey = sharePartitionKey(
+                shareFetch.groupId(),
+                topicIdPartition
+            );
+
+            SharePartition sharePartition;
+            try {
+                sharePartition = getOrCreateSharePartition(sharePartitionKey);
+            } catch (Exception e) {
+                log.debug("Error processing share fetch request", e);
+                shareFetch.addErroneous(topicIdPartition, e);
+                // Continue iteration for other partitions in the request.
+                continue;
+            }
+
+            // We add a key corresponding to each share partition in the request in the group so that when there are
+            // acknowledgements/acquisition lock timeout etc., we have a way to perform checkAndComplete for all
+            // such requests which are delayed because of lack of data to acquire for the share partition.
+            DelayedShareFetchKey delayedShareFetchKey = new DelayedShareFetchGroupKey(shareFetch.groupId(),
+                topicIdPartition.topicId(), topicIdPartition.partition());
+            delayedShareFetchWatchKeys.add(delayedShareFetchKey);
+            // We add a key corresponding to each topic partition in the request so that when the HWM is updated
+            // for any topic partition, we have a way to perform checkAndComplete for all such requests which are
+            // delayed because of lack of data to acquire for the topic partition.
+            delayedShareFetchWatchKeys.add(new DelayedShareFetchPartitionKey(topicIdPartition.topicId(), topicIdPartition.partition()));
+
+            CompletableFuture<Void> initializationFuture = sharePartition.maybeInitialize();
+            final boolean initialized = initializationFuture.isDone();
+            initializationFuture.whenComplete((result, throwable) -> {
+                if (throwable != null) {
+                    handleInitializationException(sharePartitionKey, shareFetch, throwable);
+                }
+                // Though the share partition is initialized asynchronously, but if already initialized or
+                // errored then future should be completed immediately. If the initialization is not completed
+                // immediately then the requests might be waiting in purgatory until the share partition
+                // is initialized. Hence, trigger the completion of all pending delayed share fetch requests
+                // for the share partition.
+                if (!initialized) {
+                    shareGroupMetrics.partitionLoadTime(sharePartition.loadStartTimeMs());
+                    replicaManager.completeDelayedShareFetchRequest(delayedShareFetchKey);
+                }
+            });
+            sharePartitions.put(topicIdPartition, sharePartition);
+        }
+
+        // Update the metrics for the topics for which we have received a share fetch request.
+        topics.forEach(topic -> {
+            brokerTopicStats.allTopicsStats().totalShareFetchRequestRate().mark();
+            brokerTopicStats.topicStats(topic).totalShareFetchRequestRate().mark();
+        });
+
+        // If all the partitions in the request errored out, then complete the fetch request with an exception.
+        if (shareFetch.errorInAllPartitions()) {
+            shareFetch.maybeComplete(Map.of());
+            // Do not proceed with share fetch processing as all the partitions errored out.
+            return;
+        }
+
+        // Add the share fetch to the delayed share fetch purgatory to process the fetch request.
+        // The request will be added irrespective of whether the share partition is initialized or not.
+        // Once the share partition is initialized, the delayed share fetch will be completed.
+        addDelayedShareFetch(new DelayedShareFetch(shareFetch, replicaManager, fencedSharePartitionHandler(), sharePartitions, shareGroupMetrics, time), delayedShareFetchWatchKeys);
+    }
+
+    private SharePartition getOrCreateSharePartition(SharePartitionKey sharePartitionKey) {
+        return partitionCacheMap.computeIfAbsent(sharePartitionKey,
+                k -> {
+                    int leaderEpoch = ShareFetchUtils.leaderEpoch(replicaManager, sharePartitionKey.topicIdPartition().topicPartition());
+                    // Attach listener to Partition which shall invoke partition change handlers.
+                    // However, as there could be multiple share partitions (per group name) for a single topic-partition,
+                    // hence create separate listeners per share partition which holds the share partition key
+                    // to identify the respective share partition.
+                    SharePartitionListener listener = new SharePartitionListener(sharePartitionKey, replicaManager, partitionCacheMap);
+                    replicaManager.maybeAddListener(sharePartitionKey.topicIdPartition().topicPartition(), listener);
+                    return new SharePartition(
+                            sharePartitionKey.groupId(),
+                            sharePartitionKey.topicIdPartition(),
+                            leaderEpoch,
+                            maxInFlightMessages,
+                            maxDeliveryCount,
+                            defaultRecordLockDurationMs,
+                            timer,
+                            time,
+                            persister,
+                            replicaManager,
+                            groupConfigManager,
+                            listener
+                    );
+                });
+    }
+
+    private void handleInitializationException(
+            SharePartitionKey sharePartitionKey,
+            ShareFetch shareFetch,
+            Throwable throwable) {
+        if (throwable instanceof LeaderNotAvailableException) {
+            log.debug("The share partition with key {} is not initialized yet", sharePartitionKey);
+            // Skip any handling for this error as the share partition is still loading. The request
+            // to fetch will be added in purgatory and will be completed once either timed out
+            // or the share partition initialization completes.
+            return;
+        }
+
+        // Remove the partition from the cache as it's failed to initialize.
+        removeSharePartitionFromCache(sharePartitionKey, partitionCacheMap, replicaManager);
+        // The partition initialization failed, so add the partition to the erroneous partitions.
+        log.debug("Error initializing share partition with key {}", sharePartitionKey, throwable);
+        shareFetch.addErroneous(sharePartitionKey.topicIdPartition(), throwable);
     }
 
     /**
-     * Recursive function to process all the fetch requests present inside the fetch queue
+     * The method returns a BiConsumer that handles share partition exceptions. The BiConsumer accepts
+     * a share partition key and a throwable which specifies the exception.
+     *
+     * @return A BiConsumer that handles share partition exceptions.
      */
-    // Visible for testing.
-    void maybeProcessFetchQueue() {
-        if (!processFetchQueueLock.compareAndSet(false, true)) {
-            // The queue is already being processed hence avoid re-triggering.
-            return;
-        }
-
-        // Initialize the topic partitions for which the fetch should be attempted.
-        Map<TopicIdPartition, FetchRequest.PartitionData> topicPartitionData = new LinkedHashMap<>();
-        ShareFetchPartitionData shareFetchPartitionData = fetchQueue.poll();
-        if (shareFetchPartitionData == null) {
-            // No more requests to process, so release the lock. Though we should not reach here as the lock
-            // is acquired only when there are requests in the queue. But still, it's safe to release the lock.
-            releaseProcessFetchQueueLock();
-            return;
-        }
-
-        try {
-            shareFetchPartitionData.topicIdPartitions.forEach(topicIdPartition -> {
-                SharePartitionKey sharePartitionKey = sharePartitionKey(
-                    shareFetchPartitionData.groupId,
-                    topicIdPartition
-                );
-                SharePartition sharePartition = partitionCacheMap.computeIfAbsent(sharePartitionKey,
-                    k -> {
-                        long start = time.hiResClockMs();
-                        SharePartition partition = new SharePartition(shareFetchPartitionData.groupId, topicIdPartition, maxInFlightMessages, maxDeliveryCount,
-                            recordLockDurationMs, timer, time, persister);
-                        this.shareGroupMetrics.partitionLoadTime(start);
-                        return partition;
-                    });
-                int partitionMaxBytes = shareFetchPartitionData.partitionMaxBytes.getOrDefault(topicIdPartition, 0);
-                // Add the share partition to the list of partitions to be fetched only if we can
-                // acquire the fetch lock on it.
-                if (sharePartition.maybeAcquireFetchLock()) {
-                    // If the share partition is already at capacity, we should not attempt to fetch.
-                    if (sharePartition.canAcquireRecords()) {
-                        topicPartitionData.put(
-                            topicIdPartition,
-                            new FetchRequest.PartitionData(
-                                topicIdPartition.topicId(),
-                                sharePartition.nextFetchOffset(),
-                                0,
-                                partitionMaxBytes,
-                                Optional.empty()
-                            )
-                        );
-                    } else {
-                        sharePartition.releaseFetchLock();
-                        log.info("Record lock partition limit exceeded for SharePartition with key {}, " +
-                            "cannot acquire more records", sharePartitionKey);
-                    }
-                }
-            });
-
-            if (topicPartitionData.isEmpty()) {
-                // No locks for share partitions could be acquired, so we complete the request and
-                // will re-fetch for the client in next poll.
-                shareFetchPartitionData.future.complete(Collections.emptyMap());
-                // Though if no partitions can be locked then there must be some other request which
-                // is in-flight and should release the lock. But it's safe to release the lock as
-                // the lock on share partition already exists which facilitates correct behaviour
-                // with multiple requests from queue being processed.
-                releaseProcessFetchQueueLock();
-                if (!fetchQueue.isEmpty())
-                    maybeProcessFetchQueue();
-                return;
+    private BiConsumer<SharePartitionKey, Throwable> fencedSharePartitionHandler() {
+        return (sharePartitionKey, throwable) -> {
+            if (throwable instanceof NotLeaderOrFollowerException || throwable instanceof FencedStateEpochException ||
+                throwable instanceof GroupIdNotFoundException || throwable instanceof UnknownTopicOrPartitionException) {
+                log.info("The share partition with key {} is fenced: {}", sharePartitionKey, throwable.getMessage());
+                // The share partition is fenced hence remove the partition from map and let the client retry.
+                // But surface the error to the client so client might take some action i.e. re-fetch
+                // the metadata and retry the fetch on new leader.
+                removeSharePartitionFromCache(sharePartitionKey, partitionCacheMap, replicaManager);
             }
-
-            log.trace("Fetchable share partitions data: {} with groupId: {} fetch params: {}",
-                topicPartitionData, shareFetchPartitionData.groupId, shareFetchPartitionData.fetchParams);
-
-            replicaManager.fetchMessages(
-                shareFetchPartitionData.fetchParams,
-                CollectionConverters.asScala(
-                    topicPartitionData.entrySet().stream().map(entry ->
-                        new Tuple2<>(entry.getKey(), entry.getValue())).collect(Collectors.toList())
-                ),
-                QuotaFactory.UnboundedQuota$.MODULE$,
-                responsePartitionData -> {
-                    log.trace("Data successfully retrieved by replica manager: {}", responsePartitionData);
-                    List<Tuple2<TopicIdPartition, FetchPartitionData>> responseData = CollectionConverters.asJava(
-                        responsePartitionData);
-                    processFetchResponse(shareFetchPartitionData, responseData).whenComplete(
-                        (result, throwable) -> {
-                            if (throwable != null) {
-                                log.error("Error processing fetch response for share partitions", throwable);
-                                shareFetchPartitionData.future.completeExceptionally(throwable);
-                            } else {
-                                shareFetchPartitionData.future.complete(result);
-                            }
-                            // Releasing the lock to move ahead with the next request in queue.
-                            releaseFetchQueueAndPartitionsLock(shareFetchPartitionData.groupId, topicPartitionData.keySet());
-                        });
-                    return BoxedUnit.UNIT;
-                });
-
-            // If there are more requests in the queue, then process them.
-            if (!fetchQueue.isEmpty())
-                maybeProcessFetchQueue();
-
-        } catch (Exception e) {
-            // In case exception occurs then release the locks so queue can be further processed.
-            log.error("Error processing fetch queue for share partitions", e);
-            releaseFetchQueueAndPartitionsLock(shareFetchPartitionData.groupId, topicPartitionData.keySet());
-        }
-    }
-
-    // Visible for testing.
-    CompletableFuture<Map<TopicIdPartition, ShareFetchResponseData.PartitionData>> processFetchResponse(
-        ShareFetchPartitionData shareFetchPartitionData,
-        List<Tuple2<TopicIdPartition, FetchPartitionData>> responseData
-    ) {
-        Map<TopicIdPartition, CompletableFuture<PartitionData>> futures = new HashMap<>();
-        responseData.forEach(data -> {
-            TopicIdPartition topicIdPartition = data._1;
-            FetchPartitionData fetchPartitionData = data._2;
-
-            SharePartition sharePartition = partitionCacheMap.get(sharePartitionKey(shareFetchPartitionData.groupId, topicIdPartition));
-            futures.put(topicIdPartition, sharePartition.acquire(shareFetchPartitionData.memberId, fetchPartitionData)
-                .handle((acquiredRecords, throwable) -> {
-                    log.trace("Acquired records for topicIdPartition: {} with share fetch data: {}, records: {}",
-                        topicIdPartition, shareFetchPartitionData, acquiredRecords);
-                    ShareFetchResponseData.PartitionData partitionData = new ShareFetchResponseData.PartitionData()
-                        .setPartitionIndex(topicIdPartition.partition());
-
-                    if (throwable != null) {
-                        partitionData.setErrorCode(Errors.forException(throwable).code());
-                        return partitionData;
-                    }
-
-                    if (fetchPartitionData.error.code() == Errors.OFFSET_OUT_OF_RANGE.code()) {
-                        // In case we get OFFSET_OUT_OF_RANGE error, that's because the LSO is later than the fetch offset.
-                        // So, we would update the start and end offset of the share partition and still return an empty
-                        // response and let the client retry the fetch. This way we do not lose out on the data that
-                        // would be returned for other share partitions in the fetch request.
-                        sharePartition.updateCacheAndOffsets(offsetForEarliestTimestamp(topicIdPartition));
-                        partitionData
-                            .setPartitionIndex(topicIdPartition.partition())
-                            .setRecords(null)
-                            .setErrorCode(Errors.NONE.code())
-                            .setAcquiredRecords(Collections.emptyList())
-                            .setAcknowledgeErrorCode(Errors.NONE.code());
-                        return partitionData;
-                    }
-
-                    // Maybe, in the future, check if no records are acquired, and we want to retry
-                    // replica manager fetch. Depends on the share partition manager implementation,
-                    // if we want parallel requests for the same share partition or not.
-                    partitionData
-                        .setPartitionIndex(topicIdPartition.partition())
-                        .setRecords(fetchPartitionData.records)
-                        .setErrorCode(fetchPartitionData.error.code())
-                        .setAcquiredRecords(acquiredRecords)
-                        .setAcknowledgeErrorCode(Errors.NONE.code());
-                    return partitionData;
-                }));
-        });
-
-        return CompletableFuture.allOf(futures.values().toArray(new CompletableFuture[0])).thenApply(v -> {
-            Map<TopicIdPartition, ShareFetchResponseData.PartitionData> processedResult = new HashMap<>();
-            futures.forEach((topicIdPartition, future) -> processedResult.put(topicIdPartition, future.join()));
-            return processedResult;
-        });
-    }
-
-    // Visible for testing.
-    void releaseFetchQueueAndPartitionsLock(String groupId, Set<TopicIdPartition> topicIdPartitions) {
-        topicIdPartitions.forEach(tp -> partitionCacheMap.get(sharePartitionKey(groupId, tp)).releaseFetchLock());
-        releaseProcessFetchQueueLock();
-    }
-
-    private void releaseProcessFetchQueueLock() {
-        processFetchQueueLock.set(false);
+        };
     }
 
     private SharePartitionKey sharePartitionKey(String groupId, TopicIdPartition topicIdPartition) {
         return new SharePartitionKey(groupId, topicIdPartition);
     }
 
+    private static void removeSharePartitionFromCache(
+        SharePartitionKey sharePartitionKey,
+        Map<SharePartitionKey, SharePartition> map,
+        ReplicaManager replicaManager
+    ) {
+        SharePartition sharePartition = map.remove(sharePartitionKey);
+        if (sharePartition != null) {
+            sharePartition.markFenced();
+            replicaManager.removeListener(sharePartitionKey.topicIdPartition().topicPartition(), sharePartition.listener());
+        }
+    }
+
     /**
-     * The method is used to get the offset for the earliest timestamp for the topic-partition.
+     * The handler to update the failed share acknowledge request metrics.
      *
-     * @return The offset for the earliest timestamp.
+     * @return A Consumer that updates the failed share acknowledge request metrics.
      */
-    // Visible for testing.
-    long offsetForEarliestTimestamp(TopicIdPartition topicIdPartition) {
-        // TODO: We need to know the isolation level from group configs, for now we are passing Option.empty() for isolationLevel
-        Option<TimestampAndOffset> timestampAndOffset = replicaManager.fetchOffsetForTimestamp(
-            topicIdPartition.topicPartition(), ListOffsetsRequest.EARLIEST_TIMESTAMP, Option.empty(),
-            Optional.empty(), true);
-        return timestampAndOffset.isEmpty() ? (long) 0 : timestampAndOffset.get().offset;
+    private Consumer<Set<String>> failedShareAcknowledgeMetricsHandler() {
+        return failedTopics -> {
+            // Update failed share acknowledge request metric.
+            failedTopics.forEach(topic -> {
+                brokerTopicStats.allTopicsStats().failedShareAcknowledgementRequestRate().mark();
+                brokerTopicStats.topicStats(topic).failedShareAcknowledgementRequestRate().mark();
+            });
+        };
     }
 
     /**
-     * The SharePartitionKey is used to uniquely identify a share partition. The key is made up of the
-     * share group id, the topic id and the partition id. The key is used to store the SharePartition
-     * objects in the partition cache map.
+     * The SharePartitionListener is used to listen for partition events. The share partition is associated with
+     * the topic-partition, we need to handle the partition events for the share partition.
+     * <p>
+     * The partition cache map stores share partitions against share partition key which comprises
+     * group and topic-partition. Instead of maintaining a separate map for topic-partition to share partitions,
+     * we can maintain the share partition key in the listener and create a new listener for each share partition.
      */
-    // Visible for testing
-    static class SharePartitionKey {
-        private final String groupId;
-        private final TopicIdPartition topicIdPartition;
+    static class SharePartitionListener implements PartitionListener {
 
-        public SharePartitionKey(String groupId, TopicIdPartition topicIdPartition) {
-            this.groupId = Objects.requireNonNull(groupId);
-            this.topicIdPartition = Objects.requireNonNull(topicIdPartition);
+        private final SharePartitionKey sharePartitionKey;
+        private final ReplicaManager replicaManager;
+        private final Map<SharePartitionKey, SharePartition> partitionCacheMap;
+
+        SharePartitionListener(
+            SharePartitionKey sharePartitionKey,
+            ReplicaManager replicaManager,
+            Map<SharePartitionKey, SharePartition> partitionCacheMap
+        ) {
+            this.sharePartitionKey = sharePartitionKey;
+            this.replicaManager = replicaManager;
+            this.partitionCacheMap = partitionCacheMap;
         }
 
         @Override
-        public int hashCode() {
-            return Objects.hash(groupId, topicIdPartition);
+        public void onFailed(TopicPartition topicPartition) {
+            log.debug("The share partition failed listener is invoked for the topic-partition: {}, share-partition: {}",
+                topicPartition, sharePartitionKey);
+            onUpdate(topicPartition);
         }
 
         @Override
-        public boolean equals(final Object obj) {
-            if (this == obj)
-                return true;
-            else if (obj == null || getClass() != obj.getClass())
-                return false;
-            else {
-                SharePartitionKey that = (SharePartitionKey) obj;
-                return groupId.equals(that.groupId) && Objects.equals(topicIdPartition, that.topicIdPartition);
-            }
+        public void onDeleted(TopicPartition topicPartition) {
+            log.debug("The share partition delete listener is invoked for the topic-partition: {}, share-partition: {}",
+                topicPartition, sharePartitionKey);
+            onUpdate(topicPartition);
         }
 
         @Override
-        public String toString() {
-            return "SharePartitionKey{" +
-                "groupId='" + groupId +
-                ", topicIdPartition=" + topicIdPartition +
-                '}';
-        }
-    }
-
-    /**
-     * The ShareFetchPartitionData class is used to store the fetch parameters for a share fetch request.
-     */
-    // Visible for testing
-    static class ShareFetchPartitionData {
-        private final FetchParams fetchParams;
-        private final String groupId;
-        private final String memberId;
-        private final List<TopicIdPartition> topicIdPartitions;
-        private final CompletableFuture<Map<TopicIdPartition, ShareFetchResponseData.PartitionData>> future;
-        private final Map<TopicIdPartition, Integer> partitionMaxBytes;
-
-        public ShareFetchPartitionData(FetchParams fetchParams, String groupId, String memberId,
-                                       List<TopicIdPartition> topicIdPartitions,
-                                       CompletableFuture<Map<TopicIdPartition, ShareFetchResponseData.PartitionData>> future,
-                                       Map<TopicIdPartition, Integer> partitionMaxBytes) {
-            this.fetchParams = fetchParams;
-            this.groupId = groupId;
-            this.memberId = memberId;
-            this.topicIdPartitions = topicIdPartitions;
-            this.future = future;
-            this.partitionMaxBytes = partitionMaxBytes;
-        }
-    }
-
-    static class ShareGroupMetrics {
-        /**
-         * share-acknowledgement (share-acknowledgement-rate and share-acknowledgement-count) - The total number of offsets acknowledged for share groups (requests to be ack).
-         * record-acknowledgement (record-acknowledgement-rate and record-acknowledgement-count) - The number of records acknowledged per acknowledgement type.
-         * partition-load-time (partition-load-time-avg and partition-load-time-max) - The time taken to load the share partitions.
-         */
-
-        public static final String METRICS_GROUP_NAME = "share-group-metrics";
-
-        public static final String SHARE_ACK_SENSOR = "share-acknowledgement-sensor";
-        public static final String SHARE_ACK_RATE = "share-acknowledgement-rate";
-        public static final String SHARE_ACK_COUNT = "share-acknowledgement-count";
-
-        public static final String RECORD_ACK_SENSOR_PREFIX = "record-acknowledgement";
-        public static final String RECORD_ACK_RATE = "record-acknowledgement-rate";
-        public static final String RECORD_ACK_COUNT = "record-acknowledgement-count";
-        public static final String ACK_TYPE = "ack-type";
-
-        public static final String PARTITION_LOAD_TIME_SENSOR = "partition-load-time-sensor";
-        public static final String PARTITION_LOAD_TIME_AVG = "partition-load-time-avg";
-        public static final String PARTITION_LOAD_TIME_MAX = "partition-load-time-max";
-
-        public static final Map<Byte, String> RECORD_ACKS_MAP = new HashMap<>();
-        
-        private final Time time;
-        private final Sensor shareAcknowledgementSensor;
-        private final Map<Byte, Sensor> recordAcksSensorMap = new HashMap<>();
-        private final Sensor partitionLoadTimeSensor;
-
-        static {
-            RECORD_ACKS_MAP.put((byte) 1, AcknowledgeType.ACCEPT.toString());
-            RECORD_ACKS_MAP.put((byte) 2, AcknowledgeType.RELEASE.toString());
-            RECORD_ACKS_MAP.put((byte) 3, AcknowledgeType.REJECT.toString());
+        public void onBecomingFollower(TopicPartition topicPartition) {
+            log.debug("The share partition becoming follower listener is invoked for the topic-partition: {}, share-partition: {}",
+                topicPartition, sharePartitionKey);
+            onUpdate(topicPartition);
         }
 
-        public ShareGroupMetrics(Metrics metrics, Time time) {
-            this.time = time;
-
-            shareAcknowledgementSensor = metrics.sensor(SHARE_ACK_SENSOR);
-            shareAcknowledgementSensor.add(new Meter(
-                metrics.metricName(
-                    SHARE_ACK_RATE,
-                    METRICS_GROUP_NAME,
-                    "Rate of acknowledge requests."),
-                metrics.metricName(
-                    SHARE_ACK_COUNT,
-                    METRICS_GROUP_NAME,
-                    "The number of acknowledge requests.")));
-
-            for (Map.Entry<Byte, String> entry : RECORD_ACKS_MAP.entrySet()) {
-                recordAcksSensorMap.put(entry.getKey(), metrics.sensor(String.format("%s-%s-sensor", RECORD_ACK_SENSOR_PREFIX, entry.getValue())));
-                recordAcksSensorMap.get(entry.getKey())
-                    .add(new Meter(
-                        metrics.metricName(
-                            RECORD_ACK_RATE,
-                            METRICS_GROUP_NAME,
-                            "Rate of records acknowledged per acknowledgement type.",
-                            ACK_TYPE, entry.getValue()),
-                        metrics.metricName(
-                            RECORD_ACK_COUNT,
-                            METRICS_GROUP_NAME,
-                            "The number of records acknowledged per acknowledgement type.",
-                            ACK_TYPE, entry.getValue())));
+        private void onUpdate(TopicPartition topicPartition) {
+            if (!sharePartitionKey.topicIdPartition().topicPartition().equals(topicPartition)) {
+                log.error("The share partition listener is invoked for the wrong topic-partition: {}, share-partition: {}",
+                    topicPartition, sharePartitionKey);
+                return;
             }
-
-            partitionLoadTimeSensor = metrics.sensor(PARTITION_LOAD_TIME_SENSOR);
-            partitionLoadTimeSensor.add(metrics.metricName(
-                    PARTITION_LOAD_TIME_AVG,
-                    METRICS_GROUP_NAME,
-                    "The average time in milliseconds to load the share partitions."),
-                new Avg());
-            partitionLoadTimeSensor.add(metrics.metricName(
-                    PARTITION_LOAD_TIME_MAX,
-                    METRICS_GROUP_NAME,
-                    "The maximum time in milliseconds to load the share partitions."),
-                new Max());
-        }
-
-        void shareAcknowledgement() {
-            shareAcknowledgementSensor.record();
-        }
-
-        void recordAcknowledgement(byte ackType) {
-            // unknown ack types (such as gaps for control records) are intentionally ignored
-            if (recordAcksSensorMap.containsKey(ackType)) {
-                recordAcksSensorMap.get(ackType).record();
-            }
-        }
-
-        void partitionLoadTime(long start) {
-            partitionLoadTimeSensor.record(time.hiResClockMs() - start);
+            removeSharePartitionFromCache(sharePartitionKey, partitionCacheMap, replicaManager);
         }
     }
 }
