@@ -18,8 +18,10 @@ package org.apache.kafka.raft;
 
 import org.apache.kafka.common.TopicPartition;
 import org.apache.kafka.common.Uuid;
+import org.apache.kafka.common.feature.SupportedVersionRange;
 import org.apache.kafka.common.message.AddRaftVoterRequestData;
 import org.apache.kafka.common.message.AddRaftVoterResponseData;
+import org.apache.kafka.common.message.ApiVersionsResponseData;
 import org.apache.kafka.common.message.BeginQuorumEpochRequestData;
 import org.apache.kafka.common.message.BeginQuorumEpochResponseData;
 import org.apache.kafka.common.message.DescribeQuorumRequestData;
@@ -32,17 +34,17 @@ import org.apache.kafka.common.message.FetchSnapshotRequestData;
 import org.apache.kafka.common.message.FetchSnapshotResponseData;
 import org.apache.kafka.common.message.RemoveRaftVoterRequestData;
 import org.apache.kafka.common.message.RemoveRaftVoterResponseData;
+import org.apache.kafka.common.message.UpdateRaftVoterRequestData;
+import org.apache.kafka.common.message.UpdateRaftVoterResponseData;
 import org.apache.kafka.common.message.VoteRequestData;
 import org.apache.kafka.common.message.VoteResponseData;
 import org.apache.kafka.common.network.ListenerName;
 import org.apache.kafka.common.protocol.ApiKeys;
 import org.apache.kafka.common.protocol.ApiMessage;
 import org.apache.kafka.common.protocol.Errors;
-import org.apache.kafka.raft.internals.ReplicaKey;
 
 import java.net.InetSocketAddress;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Consumer;
@@ -53,20 +55,16 @@ import java.util.stream.Collectors;
 public class RaftUtil {
 
     public static ApiMessage errorResponse(ApiKeys apiKey, Errors error) {
-        switch (apiKey) {
-            case VOTE:
-                return new VoteResponseData().setErrorCode(error.code());
-            case BEGIN_QUORUM_EPOCH:
-                return new BeginQuorumEpochResponseData().setErrorCode(error.code());
-            case END_QUORUM_EPOCH:
-                return new EndQuorumEpochResponseData().setErrorCode(error.code());
-            case FETCH:
-                return new FetchResponseData().setErrorCode(error.code());
-            case FETCH_SNAPSHOT:
-                return new FetchSnapshotResponseData().setErrorCode(error.code());
-            default:
-                throw new IllegalArgumentException("Received response for unexpected request type: " + apiKey);
-        }
+        return switch (apiKey) {
+            case VOTE -> new VoteResponseData().setErrorCode(error.code());
+            case BEGIN_QUORUM_EPOCH -> new BeginQuorumEpochResponseData().setErrorCode(error.code());
+            case END_QUORUM_EPOCH -> new EndQuorumEpochResponseData().setErrorCode(error.code());
+            case FETCH -> new FetchResponseData().setErrorCode(error.code());
+            case FETCH_SNAPSHOT -> new FetchSnapshotResponseData().setErrorCode(error.code());
+            case API_VERSIONS -> new ApiVersionsResponseData().setErrorCode(error.code());
+            case UPDATE_RAFT_VOTER -> new UpdateRaftVoterResponseData().setErrorCode(error.code());
+            default -> throw new IllegalArgumentException("Received response for unexpected request type: " + apiKey);
+        };
     }
 
     public static FetchRequestData singletonFetchRequest(
@@ -83,10 +81,10 @@ public class RaftUtil {
             new FetchRequestData.FetchTopic()
                 .setTopic(topicPartition.topic())
                 .setTopicId(topicId)
-                .setPartitions(Collections.singletonList(fetchPartition));
+                .setPartitions(List.of(fetchPartition));
 
         return new FetchRequestData()
-            .setTopics(Collections.singletonList(fetchTopic));
+            .setTopics(List.of(fetchTopic));
     }
 
     public static FetchResponseData singletonFetchResponse(
@@ -110,7 +108,7 @@ public class RaftUtil {
             new FetchResponseData.FetchableTopicResponse()
                 .setTopic(topicPartition.topic())
                 .setTopicId(topicId)
-                .setPartitions(Collections.singletonList(fetchablePartition));
+                .setPartitions(List.of(fetchablePartition));
 
         FetchResponseData response = new FetchResponseData();
 
@@ -131,33 +129,34 @@ public class RaftUtil {
 
         return response
             .setErrorCode(topLevelError.code())
-            .setResponses(Collections.singletonList(fetchableTopic));
+            .setResponses(List.of(fetchableTopic));
     }
 
     public static VoteRequestData singletonVoteRequest(
         TopicPartition topicPartition,
         String clusterId,
-        int candidateEpoch,
-        ReplicaKey candidateKey,
+        int replicaEpoch,
+        ReplicaKey replicaKey,
         ReplicaKey voterKey,
         int lastEpoch,
-        long lastEpochEndOffset
+        long lastEpochEndOffset,
+        boolean preVote
     ) {
         return new VoteRequestData()
             .setClusterId(clusterId)
             .setVoterId(voterKey.id())
             .setTopics(
-                Collections.singletonList(
+                List.of(
                     new VoteRequestData.TopicData()
                         .setTopicName(topicPartition.topic())
                         .setPartitions(
-                            Collections.singletonList(
+                            List.of(
                                 new VoteRequestData.PartitionData()
                                     .setPartitionIndex(topicPartition.partition())
-                                    .setCandidateEpoch(candidateEpoch)
-                                    .setCandidateId(candidateKey.id())
-                                    .setCandidateDirectoryId(
-                                        candidateKey
+                                    .setReplicaEpoch(replicaEpoch)
+                                    .setReplicaId(replicaKey.id())
+                                    .setReplicaDirectoryId(
+                                        replicaKey
                                             .directoryId()
                                             .orElse(ReplicaKey.NO_DIRECTORY_ID)
                                     )
@@ -168,6 +167,7 @@ public class RaftUtil {
                                     )
                                     .setLastOffsetEpoch(lastEpoch)
                                     .setLastOffset(lastEpochEndOffset)
+                                    .setPreVote(preVote)
                             )
                         )
                 )
@@ -185,17 +185,18 @@ public class RaftUtil {
         boolean voteGranted,
         Endpoints endpoints
     ) {
+        VoteResponseData.PartitionData partitionData = new VoteResponseData.PartitionData()
+            .setErrorCode(partitionLevelError.code())
+            .setLeaderId(leaderId)
+            .setLeaderEpoch(leaderEpoch)
+            .setVoteGranted(voteGranted);
+
         VoteResponseData response = new VoteResponseData()
             .setErrorCode(topLevelError.code())
-            .setTopics(Collections.singletonList(
+            .setTopics(List.of(
                 new VoteResponseData.TopicData()
                     .setTopicName(topicPartition.topic())
-                    .setPartitions(Collections.singletonList(
-                        new VoteResponseData.PartitionData()
-                            .setErrorCode(partitionLevelError.code())
-                            .setLeaderId(leaderId)
-                            .setLeaderEpoch(leaderEpoch)
-                            .setVoteGranted(voteGranted)))));
+                    .setPartitions(List.of(partitionData))));
 
         if (apiVersion >= 1) {
             Optional<InetSocketAddress> address = endpoints.address(listenerName);
@@ -240,10 +241,10 @@ public class RaftUtil {
             .setReplicaId(replicaKey.id())
             .setMaxBytes(maxBytes)
             .setTopics(
-                Collections.singletonList(
+                List.of(
                     new FetchSnapshotRequestData.TopicSnapshot()
                         .setName(topicPartition.topic())
-                        .setPartitions(Collections.singletonList(partitionSnapshot))
+                        .setPartitions(List.of(partitionSnapshot))
                 )
             );
     }
@@ -275,10 +276,10 @@ public class RaftUtil {
 
         FetchSnapshotResponseData response = new FetchSnapshotResponseData()
             .setTopics(
-                Collections.singletonList(
+                List.of(
                     new FetchSnapshotResponseData.TopicSnapshot()
                         .setName(topicPartition.topic())
-                        .setPartitions(Collections.singletonList(partitionSnapshot))
+                        .setPartitions(List.of(partitionSnapshot))
                 )
             );
 
@@ -313,11 +314,11 @@ public class RaftUtil {
             .setClusterId(clusterId)
             .setVoterId(voterKey.id())
             .setTopics(
-                Collections.singletonList(
+                List.of(
                     new BeginQuorumEpochRequestData.TopicData()
                         .setTopicName(topicPartition.topic())
                         .setPartitions(
-                            Collections.singletonList(
+                            List.of(
                                 new BeginQuorumEpochRequestData.PartitionData()
                                     .setPartitionIndex(topicPartition.partition())
                                     .setLeaderEpoch(leaderEpoch)
@@ -343,11 +344,11 @@ public class RaftUtil {
         BeginQuorumEpochResponseData response = new BeginQuorumEpochResponseData()
             .setErrorCode(topLevelError.code())
             .setTopics(
-                Collections.singletonList(
+                List.of(
                     new BeginQuorumEpochResponseData.TopicData()
                         .setTopicName(topicPartition.topic())
                         .setPartitions(
-                            Collections.singletonList(
+                            List.of(
                                 new BeginQuorumEpochResponseData.PartitionData()
                                     .setErrorCode(partitionLevelError.code())
                                     .setLeaderId(leaderId)
@@ -399,11 +400,11 @@ public class RaftUtil {
         return new EndQuorumEpochRequestData()
             .setClusterId(clusterId)
             .setTopics(
-                Collections.singletonList(
+                List.of(
                     new EndQuorumEpochRequestData.TopicData()
                         .setTopicName(topicPartition.topic())
                         .setPartitions(
-                            Collections.singletonList(
+                            List.of(
                                 new EndQuorumEpochRequestData.PartitionData()
                                     .setPartitionIndex(topicPartition.partition())
                                     .setLeaderEpoch(leaderEpoch)
@@ -429,10 +430,10 @@ public class RaftUtil {
     ) {
         EndQuorumEpochResponseData response = new EndQuorumEpochResponseData()
                    .setErrorCode(topLevelError.code())
-                   .setTopics(Collections.singletonList(
+                   .setTopics(List.of(
                        new EndQuorumEpochResponseData.TopicData()
                            .setTopicName(topicPartition.topic())
-                           .setPartitions(Collections.singletonList(
+                           .setPartitions(List.of(
                                new EndQuorumEpochResponseData.PartitionData()
                                    .setErrorCode(partitionLevelError.code())
                                    .setLeaderId(leaderId)
@@ -466,11 +467,11 @@ public class RaftUtil {
 
         return new DescribeQuorumRequestData()
             .setTopics(
-                Collections.singletonList(
+                List.of(
                     new DescribeQuorumRequestData.TopicData()
                         .setTopicName(topicPartition.topic())
                         .setPartitions(
-                            Collections.singletonList(
+                            List.of(
                                 new DescribeQuorumRequestData.PartitionData()
                                     .setPartitionIndex(topicPartition.partition())
                             )
@@ -491,11 +492,11 @@ public class RaftUtil {
     ) {
         DescribeQuorumResponseData response = new DescribeQuorumResponseData()
             .setTopics(
-                Collections.singletonList(
+                List.of(
                     new DescribeQuorumResponseData.TopicData()
                         .setTopicName(topicPartition.topic())
                         .setPartitions(
-                            Collections.singletonList(
+                            List.of(
                                 new DescribeQuorumResponseData.PartitionData()
                                     .setPartitionIndex(topicPartition.partition())
                                     .setErrorCode(Errors.NONE.code())
@@ -542,7 +543,7 @@ public class RaftUtil {
             .setErrorCode(error.code())
             .setErrorMessage(errorMessage);
     }
-    
+
     public static RemoveRaftVoterRequestData removeVoterRequest(
         String clusterId,
         ReplicaKey voter
@@ -562,6 +563,48 @@ public class RaftUtil {
         return new RemoveRaftVoterResponseData()
             .setErrorCode(error.code())
             .setErrorMessage(errorMessage);
+    }
+
+    public static UpdateRaftVoterRequestData updateVoterRequest(
+        String clusterId,
+        ReplicaKey voter,
+        int epoch,
+        SupportedVersionRange supportedVersions,
+        Endpoints endpoints
+    ) {
+        UpdateRaftVoterRequestData request = new UpdateRaftVoterRequestData()
+            .setClusterId(clusterId)
+            .setCurrentLeaderEpoch(epoch)
+            .setVoterId(voter.id())
+            .setVoterDirectoryId(voter.directoryId().orElse(ReplicaKey.NO_DIRECTORY_ID))
+            .setListeners(endpoints.toUpdateVoterRequest());
+
+        request.kRaftVersionFeature()
+            .setMinSupportedVersion(supportedVersions.min())
+            .setMaxSupportedVersion(supportedVersions.max());
+
+        return request;
+    }
+
+    public static UpdateRaftVoterResponseData updateVoterResponse(
+        Errors error,
+        ListenerName listenerName,
+        LeaderAndEpoch leaderAndEpoch,
+        Endpoints endpoints
+    ) {
+        UpdateRaftVoterResponseData response = new UpdateRaftVoterResponseData()
+            .setErrorCode(error.code());
+
+        response.currentLeader()
+            .setLeaderId(leaderAndEpoch.leaderId().orElse(-1))
+            .setLeaderEpoch(leaderAndEpoch.epoch());
+
+        Optional<InetSocketAddress> address = endpoints.address(listenerName);
+        address.ifPresent(inetSocketAddress -> response.currentLeader()
+            .setHost(inetSocketAddress.getHostString())
+            .setPort(inetSocketAddress.getPort()));
+
+        return response;
     }
 
     private static List<DescribeQuorumResponseData.ReplicaState> toReplicaStates(
@@ -634,6 +677,14 @@ public class RaftUtil {
     }
 
     public static Optional<ReplicaKey> removeVoterRequestVoterKey(RemoveRaftVoterRequestData request) {
+        if (request.voterId() < 0) {
+            return Optional.empty();
+        } else {
+            return Optional.of(ReplicaKey.of(request.voterId(), request.voterDirectoryId()));
+        }
+    }
+
+    public static Optional<ReplicaKey> updateVoterRequestVoterKey(UpdateRaftVoterRequestData request) {
         if (request.voterId() < 0) {
             return Optional.empty();
         } else {
