@@ -18,9 +18,7 @@ package org.apache.kafka.raft;
 
 import org.apache.kafka.common.Uuid;
 import org.apache.kafka.common.protocol.types.TaggedFields;
-import org.apache.kafka.common.utils.Utils;
 import org.apache.kafka.raft.generated.QuorumStateData;
-import org.apache.kafka.raft.internals.ReplicaKey;
 import org.apache.kafka.server.common.KRaftVersion;
 import org.apache.kafka.test.TestUtils;
 
@@ -38,7 +36,6 @@ import java.io.IOException;
 import java.io.OutputStreamWriter;
 import java.io.UncheckedIOException;
 import java.nio.charset.StandardCharsets;
-import java.util.Collections;
 import java.util.Optional;
 import java.util.Set;
 
@@ -58,20 +55,28 @@ public class FileQuorumStateStoreTest {
         final int voter1 = 1;
         final int voter2 = 2;
         final int voter3 = 3;
-        Set<Integer> voters = Utils.mkSet(voter1, voter2, voter3);
+        ReplicaKey votedKey = ReplicaKey.of(voter1, Uuid.randomUuid());
+        Set<Integer> voters = Set.of(voter1, voter2, voter3);
 
         stateStore.writeElectionState(
-            ElectionState.withElectedLeader(epoch, voter1, voters),
+            ElectionState.withElectedLeader(epoch, voter1, Optional.of(votedKey), voters),
             kraftVersion
         );
 
         final Optional<ElectionState> expected;
         if (kraftVersion.isReconfigSupported()) {
             expected = Optional.of(
-                ElectionState.withElectedLeader(epoch, voter1, Collections.emptySet())
+                ElectionState.withElectedLeader(epoch, voter1, Optional.of(votedKey), Set.of())
             );
         } else {
-            expected = Optional.of(ElectionState.withElectedLeader(epoch, voter1, voters));
+            expected = Optional.of(
+                ElectionState.withElectedLeader(
+                    epoch,
+                    voter1,
+                    Optional.of(ReplicaKey.of(voter1, ReplicaKey.NO_DIRECTORY_ID)),
+                    voters
+                )
+            );
         }
 
         assertEquals(expected, stateStore.readElectionState());
@@ -89,7 +94,7 @@ public class FileQuorumStateStoreTest {
         final ReplicaKey voter1Key = ReplicaKey.of(voter1, Uuid.randomUuid());
         final int voter2 = 2;
         final int voter3 = 3;
-        Set<Integer> voters = Utils.mkSet(voter1, voter2, voter3);
+        Set<Integer> voters = Set.of(voter1, voter2, voter3);
 
         stateStore.writeElectionState(
             ElectionState.withVotedCandidate(epoch, voter1Key, voters),
@@ -102,7 +107,7 @@ public class FileQuorumStateStoreTest {
                 ElectionState.withVotedCandidate(
                     epoch,
                     voter1Key,
-                    Collections.emptySet()
+                    Set.of()
                 )
             );
         } else {
@@ -125,7 +130,7 @@ public class FileQuorumStateStoreTest {
         FileQuorumStateStore stateStore = new FileQuorumStateStore(TestUtils.tempFile());
 
         final int epoch = 2;
-        Set<Integer> voters = Utils.mkSet(1, 2, 3);
+        Set<Integer> voters = Set.of(1, 2, 3);
 
         stateStore.writeElectionState(
             ElectionState.withUnknownLeader(epoch, voters),
@@ -134,7 +139,7 @@ public class FileQuorumStateStoreTest {
 
         final Optional<ElectionState> expected;
         if (kraftVersion.isReconfigSupported()) {
-            expected = Optional.of(ElectionState.withUnknownLeader(epoch, Collections.emptySet()));
+            expected = Optional.of(ElectionState.withUnknownLeader(epoch, Set.of()));
         } else {
             expected = Optional.of(ElectionState.withUnknownLeader(epoch, voters));
         }
@@ -149,14 +154,14 @@ public class FileQuorumStateStoreTest {
         FileQuorumStateStore stateStore = new FileQuorumStateStore(stateFile);
 
         final int epoch = 2;
-        Set<Integer> voters = Utils.mkSet(1, 2, 3);
+        Set<Integer> voters = Set.of(1, 2, 3);
 
         stateStore.writeElectionState(ElectionState.withUnknownLeader(epoch, voters), KRAFT_VERSION_1);
 
         // Check that state is persisted
         FileQuorumStateStore reloadedStore = new FileQuorumStateStore(stateFile);
         assertEquals(
-            Optional.of(ElectionState.withUnknownLeader(epoch, Collections.emptySet())),
+            Optional.of(ElectionState.withUnknownLeader(epoch, Set.of())),
             reloadedStore.readElectionState()
         );
     }
