@@ -24,10 +24,11 @@ import org.apache.kafka.tiered.storage.TieredStorageTestAction;
 import org.apache.kafka.tiered.storage.TieredStorageTestContext;
 
 import java.io.PrintStream;
-import java.util.Collections;
+import java.util.Map;
 import java.util.concurrent.ExecutionException;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public final class ExpectListOffsetsAction implements TieredStorageTestAction {
@@ -47,7 +48,7 @@ public final class ExpectListOffsetsAction implements TieredStorageTestAction {
     @Override
     public void doExecute(TieredStorageTestContext context) throws InterruptedException, ExecutionException {
         ListOffsetsResult.ListOffsetsResultInfo listOffsetsResult = context.admin()
-                .listOffsets(Collections.singletonMap(partition, spec))
+                .listOffsets(Map.of(partition, spec))
                 .all()
                 .get()
                 .get(partition);
@@ -55,6 +56,8 @@ public final class ExpectListOffsetsAction implements TieredStorageTestAction {
         if (expected.epoch != -1) {
             assertTrue(listOffsetsResult.leaderEpoch().isPresent());
             assertEquals(expected.epoch, listOffsetsResult.leaderEpoch().get());
+        } else {
+            assertFalse(listOffsetsResult.leaderEpoch().isPresent());
         }
     }
 
